--- a/backend/views/user/invoice.ejs
+++ b/backend/views/user/invoice.ejs
@@ -92,7 +92,7 @@
   <div class="invoice-box">
 
     <div class="top-section">
-      <img src="https://drive.google.com/file/d/1fMjtx-sjEBYsnI3aNEXcprj-CzYrpol-/view?usp=drive_link" alt="Hofmaan Logo" class="company-logo" />
+      <img src="https://stayrare-images.s3.ap-south-1.amazonaws.com/blogs/logo.png" alt="Stayrare" class="company-logo" />
       <div class="company-details">
         <h2>STAYRARE</h2>
         <p>www.stayrare.in</p>
