--- a/backend/public/admin-css/styles.css
+++ b/backend/public/admin-css/styles.css
@@ -2912,7 +2912,7 @@ form input[type=color] {
   font-weight: 400;
   line-height: 20px;
   letter-spacing: -1px;
-  background-color: var(--Surface-3);
+  background-color: rgb(250, 250, 250);
   border: 0;
   border-radius: 12px;
   color: var(--Surface-2);
