--- a/backend/views/user/product-details.ejs
+++ b/backend/views/user/product-details.ejs
@@ -814,12 +814,9 @@
                                 <div class="qty-control__reduce">-</div>
                                 <div class="qty-control__increase">+</div>
                             </div>
-                            <button type="submit" class="btn btn-primary btn-addtocart">
-                                <svg width="20" height="20" fill="#ffff"
-                                    style="vertical-align:middle;margin-right:6px;" viewBox="0 0 20 20">
-                                    <path
-                                        d="M6 16a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 2a2 2 0 1 1 4 0 2 2 0 0 1-4 0zM2 2h2l3.6 7.59-1.35 2.44A1 1 0 0 0 7 14h9v-2H7.42a.25.25 0 0 1-.23-.14l.03-.06L8.1 11h7.45a1 1 0 0 0 .95-.68l3.24-7.59A1 1 0 0 0 19 2H5.21l-.94-2H0v2h2z" />
-                                </svg>Buy Now
+                          
+                            <button type="submit" class="btn btn-primary btn-buynow" id="buyNowBtn">
+                                ⚡ Buy Now
                             </button>
                         </div>
                     </form>
@@ -1398,9 +1395,7 @@
                     }
                 }
 
-                // Initial render (in case JS needs to re-render on page load)
-                // (No-op, as EJS already rendered initial images)
-
+              
                 // Listen for color change
                 colorInputs.forEach(function(input) {
                     input.addEventListener('change', function() {
@@ -1711,7 +1706,6 @@
                                     cartCountElement.textContent = totalQty;
                                 }
 
-                                // Redirect to /cart after successful add for guest
                                 window.location.href = '/cart';
                                 return;
                             } catch (error) {
